--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <% include partials/head.ejs %>
 
   <main class="main">
+    
     <div class="main_slider">
       <div class="cycle-slideshow"> <!-- hacer fade en 6s -->
 
@@ -86,7 +87,7 @@
     </section>
 
     <section class="main__more ">
-      <div class="main__more__bg" style="background-image:url('./img/hands.jpg');"></div>
+      <div class="main__more__bg" style="background-image:url('./img/buider.jpg');"></div>
       <div class="inner"> 
         <div class="main__more__info">
           <h2 class="main__more__title">Conozca el equipo de trabajo</h2>
