--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
       </article>
         
     </section>
-    <section class="main__contact ">
+    <section class="main__contact">
       <div class="inner"> 
         <h2 class="main__contact__title">Consulte con nosotros</h2>
         <a class="main__contact__button btn btn-white" href="#">Contáctenos</a>
@@ -87,8 +87,8 @@
     </section>
 
     <section class="main__more ">
-      <div class="main__more__bg" style="background-image:url('./img/buider.jpg');"></div>
-      <div class="inner"> 
+      <div class="main__more__bg" style="background-image:url('./img/builder.jpg');"></div>
+      <div class="inner">
         <div class="main__more__info">
           <h2 class="main__more__title">Conozca el equipo de trabajo</h2>
           <a class="main__more__button btn btn-white" href="#">Conozca más</a>
