--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
           <div class="inner">
             <div class="inner">
               <div class="main_slider_slide_info main_slider_slide_info--left">
-                <h1>Consultoría</h1>
+                <h1>Despachos Jurídicos</h1>
                 <h4 class="white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
               </div>
             </div>
@@ -87,11 +87,12 @@
     </section>
 
     <section class="main__more ">
-      <div class="main__more__bg" style="background-image:url('./img/builder.jpg');"></div>
-      <div class="inner">
-        <div class="main__more__info">
-          <h2 class="main__more__title">Conozca el equipo de trabajo</h2>
-          <a class="main__more__button btn btn-white" href="#">Conozca más</a>
+      <div class="main__more__bg">
+        <div class="inner">
+          <div class="main__more__info">
+            <h2 class="main__more__title">Conozca el equipo de trabajo</h2>
+            <a class="main__more__button btn btn-white" href="#">Conozca más</a>
+          </div>
         </div>
       </div>
     </section>
