--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,11 @@
 * {
   font-family: 'Roboto', sans-serif;
-  margin:0px;
+  margin:0;
   padding-top:0px;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* Contexto de boton blanco */
@@ -181,6 +185,151 @@
     background-size: cover;
     margin-left: 0;
   }
+}
+
+/* TARJETAS */
+
+/* Tarjeta tomada de https://github.com/falconmasters/Tarjetas-3D-con-HTML5-y-CSS3 */
+
+/* contenedor */
+
+.main__featured {
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: -2.7em;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+/* contenedor de tarjeta */
+
+.main__featured__item {
+  margin: 20px;
+}
+
+.main__featured__item .main__featured__item__link {
+	display: inline-block;
+}
+
+.main__featured__item:hover .main__featured__item__figure {
+	transform: perspective(600px) rotateY(180deg);
+	-webkit-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.25);
+	box-shadow: 0px 2px 10px 2px rgba(0,0,0,0.25);
+}
+
+.main__featured__item:hover .main__featured__item__figure .main__featured__item__img {
+  /* Si queremos podemos aplicar un efecto blur a nuestra imagen al girar */
+  filter:blur(2px);
+}
+
+.main__featured__item__figure {
+  width: 250px;
+	height: 300px;
+	margin:0;
+	position: relative;
+	transition: all ease .5s;
+	transform-style: preserve-3d;
+	/* Nota:
+  Establecemos que la imagen tendra una rotacion de 0grados al inicio porque si no
+		ponemos esta propiedad nos da un poco de problemas en algunos navegadores al pasar el cursor.
+    */
+    transform: perspective(600px) rotateY(0deg);
+  }
+
+  .main__featured__item__figure .main__featured__item__img, .main__featured__item__figure .main__featured__item__caption {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+	transition: all ease .5s;
+}
+
+.main__featured__item__figure .main__featured__item__img {
+  display: block;
+	background: #000;
+  
+	/* Podemos ocultar la imagen al da la vuelta si lo queremos */
+	/*backface-visibility: hidden;*/
+}
+
+.main__featured__item__figure .main__featured__item__caption {
+  position: absolute;
+	top: 0;
+	padding: 20px;
+	color: #fff;
+	transform: perspective(600px) rotateY(180deg);
+	backface-visibility: hidden;
+	overflow: auto;
+}
+
+.main__featured__item:nth-child(1) .main__featured__item__figure .main__featured__item__caption{
+  background: rgba(223,234,241,0.7);
+	background: -moz-linear-gradient(top, rgba(223,234,241,0.7) 0%, rgba(15,99,144,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(223,234,241,0.7)), color-stop(100%, rgba(15,99,144,1)));
+	background: -webkit-linear-gradient(top, rgba(223,234,241,0.7) 0%, rgba(15,99,144,1) 100%);
+	background: -o-linear-gradient(top, rgba(223,234,241,0.7) 0%, rgba(15,99,144,1) 100%);
+	background: -ms-linear-gradient(top, rgba(223,234,241,0.7) 0%, rgba(15,99,144,1) 100%);
+	background: linear-gradient(to bottom, rgba(223,234,241,0.7) 0%, rgba(15,99,144,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dfeaf1', endColorstr='#0f6390', GradientType=0 );
+}
+
+.main__featured__item:nth-child(2) .main__featured__item__figure .main__featured__item__caption{
+  background: rgba(251,232,202,0.7);
+	background: -moz-linear-gradient(top, rgba(251,232,202,0.7) 0%, rgba(25,44,72,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(251,232,202,0.7)), color-stop(100%, rgba(25,44,72,1)));
+	background: -webkit-linear-gradient(top, rgba(251,232,202,0.7) 0%, rgba(25,44,72,1) 100%);
+	background: -o-linear-gradient(top, rgba(251,232,202,0.7) 0%, rgba(25,44,72,1) 100%);
+	background: -ms-linear-gradient(top, rgba(251,232,202,0.7) 0%, rgba(25,44,72,1) 100%);
+	background: linear-gradient(to bottom, rgba(251,232,202,0.7) 0%, rgba(25,44,72,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fbe8ca', endColorstr='#192c48', GradientType=0 );
+}
+
+.main__featured__item:nth-child(3) .main__featured__item__figure .main__featured__item__caption{
+  background: rgba(95,58,53,0.7);
+	background: -moz-linear-gradient(top, rgba(95,58,53,0.7) 0%, rgba(221,32,47,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(95,58,53,0.7)), color-stop(100%, rgba(221,32,47,1)));
+	background: -webkit-linear-gradient(top, rgba(95,58,53,0.7) 0%, rgba(221,32,47,1) 100%);
+	background: -o-linear-gradient(top, rgba(95,58,53,0.7) 0%, rgba(221,32,47,1) 100%);
+	background: -ms-linear-gradient(top, rgba(95,58,53,0.7) 0%, rgba(221,32,47,1) 100%);
+	background: linear-gradient(to bottom, rgba(95,58,53,0.7) 0%, rgba(221,32,47,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f3a35', endColorstr='#dd202f', GradientType=0 );
+}
+
+.main__featured__item__figure .main__featured__item__caption .titulo {
+  color: #fff;
+	font-weight: normal;
+	margin-bottom: 20px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 24px;
+}
+
+.main__featured__item__figure .main__featured__item__caption hr {
+	height: 2px;
+	background: #fff;
+	border: none;
+	margin-bottom: 20px;
+	opacity: .5;
+}
+
+.main__featured__item__figure .main__featured__item__caption p {
+	font-family: 'Open Sans', sans-serif;
+	line-height: 22px;
+	font-size: 14px;
+}
+
+@media screen and (max-width: 992px) { 
+	.main__featured__item__figure .main__featured__item__caption {
+		/*position: relative;*/
+		backface-visibility:visible;
+		transform: perspective(600px) rotateY(0deg);
+	}
+
+	.main__featured__item:hover .main__featured__item__figure {
+		transform: perspective(600px) rotateY(0deg);	
+	}
+
 }
 
 /* CONTACTENOS */
