--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,24 +27,25 @@
       
       </div>
     </div>
-
+    <!-- Tarjetas -->
     <section class="main__featured inner">
+      
       <article class="main__featured__item">
         <a href="#" class="main__featured__item__link">
           <figure class="main__featured__item__figure">
-            <div class="main__featured__item__img" style="background-image: url('img/featured1.jpg');"></div>
+            <div class="main__featured__item__img" style="background-image: url('img/tarjetas/edificio1.jpg'); background-repeat: no-repeat; background-size: cover;"></div>
               <figcaption class="main__featured__item__caption bg-celeste">
                 <h3 class="main__featured__item__title">Lorem upsum</h3>
                   <p class="main__featured__item__description">Lorem ipsum dolor sit amet, consectetur.</p>
-              </figcaption>   
+              </figcaption>
           </figure>
-        </a>
-            
+        </a>      
       </article>
+
       <article class="main__featured__item">
         <a href="#" class="main__featured__item__link">
           <figure class="main__featured__item__figure">
-            <div class="main__featured__item__img" style="background-image: url('img/featured2.jpg');"></div>
+            <div class="main__featured__item__img" style="background-image: url('img/tarjetas/edificio2.jpg'); background-repeat: no-repeat; background-size: cover;"></div>
             <figcaption class="main__featured__item__caption bg-celeste">
               <h3 class="main__featured__item__title">Lorem upsum</h3>
               <p class="main__featured__item__description">Lorem ipsum dolor sit amet, consectetur.</p>
@@ -56,7 +57,7 @@
       <article class="main__featured__item">
         <a href="#" class="main__featured__item__link">
           <figure class="main__featured__item__figure">
-            <div class="main__featured__item__img" style="background-image: url('img/featured3.jpg');"></div>
+            <div class="main__featured__item__img" style="background-image: url('img/tarjetas/edificio3.jpg'); background-repeat: no-repeat; background-size: cover;"></div>
             <figcaption class="main__featured__item__caption bg-celeste">
               <h3 class="main__featured__item__title">Lorem upsum</h3>
               <p class="main__featured__item__description">Lorem ipsum dolor sit amet, consectetur.</p>
@@ -68,7 +69,7 @@
       <article class="main__featured__item">
         <a href="#" class="main__featured__item__link">
           <figure class="main__featured__item__figure">
-            <div class="main__featured__item__img" style="background-image: url('img/featured4.jpg');"></div>
+            <div class="main__featured__item__img" style="background-image: url('img/tarjetas/edificio4.jpg'); background-repeat: no-repeat; background-size: cover;"></div>
             <figcaption class="main__featured__item__caption bg-celeste">
               <h3 class="main__featured__item__title">Lorem upsum</h3>
                 <p class="main__featured__item__description">Lorem ipsum dolor sit amet, consectetur.</p>
@@ -79,6 +80,7 @@
       </article>
         
     </section>
+
     <section class="main__contact">
       <div class="inner"> 
         <h2 class="main__contact__title">Consulte con nosotros</h2>
